test/expected/escape_two_asterisks.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "*"
  Literal "*"
]
shit: 2:6: error: The glob pattern '**' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G '**' or relax with set +o failglob.
     2 |  echo *\*
       |       ^~~ here.
